fixed a bug where mobile devices were getting a margin on the right hand side, setting body and html overflow-x to none fixed it

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -83,13 +83,18 @@ hr {
 
 html {
     font-size: 14px;
-    overflow-x: hidden;
 }
 
 body {
     background: url("../assets/images/bg_paper.jpg");
     background-repeat: repeat-x repeat-y;
+
 }
+//HUGELY IMPORTANT********BOOTSTRAP LIKES TO ADD MARGIN ON THE RIGHT HAND SIDE FOR BELOW 400px width, SO BASICALLY MOBILE DEVICES--FIX BELOW
+html, body {
+  overflow-x: hidden;
+}
+//HUGELY IMPORTANT!!!!
 
 nav {
     top: 0;
